# routes/room.js
@@ -1,12 +1,13 @@
+/* eslint-disable no-underscore-dangle */
 const router = require('express').Router();
 const { soliditySha3 } = require('web3-utils');
 const verify = require('../verifyToken');
-const User = require('../models/User');
-const Room = require('../models/Room');
 const Utils = require('../utils/utils');
 const { blue, info } = require('../utils/constants');
 
 const BookService = require('../services/bookService');
+const RoomModelService = require('../modelServices/roomModelService');
+const UserModelService = require('../modelServices/userModelService');
 
 const getComputedHash = (resource, from, to) => {
   const soliditySha3Expected = soliditySha3(
@@ -18,9 +19,9 @@ const getComputedHash = (resource, from, to) => {
   return bn.toString();
 };
 
-router.get('/availibilities', verify.verifyToken, async (req, res) => {
+router.get('/availabilities', verify.verifyToken, async (req, res) => {
   try {
-    const result = await Room.getAllAvailibilities();
+    const result = await RoomModelService.getAllAvailibilities();
     return Utils.getJsonResponse('ok', 200, '', result, res);
   } catch (err) {
     return Utils.getJsonResponse('error', 400, err, '', res);
@@ -28,7 +29,7 @@ router.get('/availibilities', verify.verifyToken, async (req, res) => {
 });
 
 router.post('/book', verify.verifyToken, async (req, res) => {
-  const user = await User.findById(req.user._id);
+  const user = await UserModelService.findById(req.user._id);
   try {
     const { resource, from, to } = req.body;
     console.log(blue('Attempt to book a room'));
@@ -41,12 +42,12 @@ router.post('/book', verify.verifyToken, async (req, res) => {
 });
 
 router.post('/cancel', verify.verifyToken, async (req, res) => {
-  const user = await User.findById(req.user._id);
+  const user = await UserModelService.findById(req.user._id);
   try {
     const { resource, from, to } = req.body;
     const computedBookingId = getComputedHash(resource, from, to);
     console.log(info(`Received cancel request for this bookingId ${computedBookingId}`));
-    const room = await Room.findOne({ bookingId: computedBookingId });
+    const room = await RoomModelService.findOneByBookingId(computedBookingId);
     if (!room) {
       return Utils.getJsonResponse('error', 409, 'This resource is not booked', '', res);
     }
